--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea
+.idea/
 *.iws
 *.iml
 *.ipr
@@ -33,6 +33,5 @@ build/
 
 ### Mac OS ###
 .DS_Store
-
-.idea
 src/main/webapp
+/src/main/webapp/
